@@ -92,8 +92,7 @@ sub list_files {
    }
 
    Rex::Logger::debug("Reading directory contents.");
-   if(my $ssh = Rex::is_ssh()) {
-      my $sftp = $ssh->sftp;
+   if(my $sftp = Rex::get_sftp()) {
       my $dir = $sftp->opendir($path);
       unless($dir) {
          die("Can't read $path");
@@ -175,13 +174,13 @@ sub unlink {
 
    Rex::Logger::debug("Unlinking files: " . join(", ", @files));
 
-   if(my $ssh = Rex::is_ssh()) {
+   if(my $sftp = Rex::get_sftp()) {
       for my $file (@files) {
          unless(is_file($file)) {
             Rex::Logger::info("unlink: $file not found");
             next;
          }
-         $ssh->sftp->unlink($file);
+         $sftp->unlink($file);
       }
    } else {
       CORE::unlink(@files);
@@ -251,8 +250,8 @@ sub mkdir {
    my $not_recursive = $options->{"not_recursive"} || 0;
 
    if($not_recursive) {
-      if(my $ssh = Rex::is_ssh()) {
-         unless($ssh->sftp->mkdir($dir)) {
+      if(my $sftp = Rex::get_sftp()) {
+         unless($sftp->mkdir($dir)) {
             Rex::Logger::debug("Can't create directory $dir");
             die("Can't create directory $dir");
          }
@@ -282,8 +281,8 @@ sub mkdir {
       $str_part .= "$part";
 
       if(! is_dir($str_part) && ! is_file($str_part)) {
-         if(my $ssh = Rex::is_ssh()) {
-            unless($ssh->sftp->mkdir($str_part)) {
+         if(my $sftp = Rex::get_sftp()) {
+            unless($sftp->mkdir($str_part)) {
                Rex::Logger::debug("Can't create directory $dir");
                die("Can't create directory $dir");
             }
@@ -408,8 +407,8 @@ sub stat {
 
    Rex::Logger::debug("Getting fs stat from $_[0]");
 
-   if(my $ssh = Rex::is_ssh()) {
-      %ret = $ssh->sftp->stat($_[0]);
+   if(my $sftp = Rex::get_sftp()) {
+      %ret = $sftp->stat($_[0]);
       
       unless(%ret) {
          Rex::Logger::debug("Can't stat $_[0]");
@@ -454,12 +453,12 @@ This function tests if $file is a file. Returns 1 if true. 0 if false.
 sub is_file {
    Rex::Logger::debug("Checking if $_[0] is a file");
    
-   if(my $ssh = Rex::is_ssh()) {
-      if( $ssh->sftp->opendir($_[0]) ) {
+   if(my $sftp = Rex::get_sftp()) {
+      if( $sftp->opendir($_[0]) ) {
          return 0;
       }
 
-      if( ! $ssh->sftp->open($_[0], O_RDONLY) ) {
+      if( ! $sftp->open($_[0], O_RDONLY) ) {
          return 0;
       }
    } else {
@@ -489,8 +488,8 @@ This function tests if $dir is a directory. Returns 1 if true. 0 if false.
 sub is_dir {
    Rex::Logger::debug("Checking if $_[0] is a directory");
 
-   if(my $ssh = Rex::is_ssh()) {
-      if( ! $ssh->sftp->opendir($_[0]) ) {
+   if(my $sftp = Rex::get_sftp()) {
+      if( ! $sftp->opendir($_[0]) ) {
          return 0;
       }
    } else {
@@ -598,8 +597,8 @@ sub readlink {
    my $link;
    Rex::Logger::debug("Reading link of $_[0]");
 
-   if(my $ssh = Rex::is_ssh()) {
-      $link = $ssh->sftp->readlink($_[0]);
+   if(my $sftp = Rex::get_sftp()) {
+      $link = $sftp->readlink($_[0]);
    } else {
       $link = CORE::readlink($_[0]);
    }
@@ -628,8 +627,8 @@ sub rename {
    Rex::Logger::debug("Renaming $old to $new");
 
    my $ret;
-   if(my $ssh = Rex::is_ssh()) {
-      $ret = $ssh->sftp->rename($old, $new);
+   if(my $sftp = Rex::get_sftp()) {
+      $ret = $sftp->rename($old, $new);
    } else {
       $ret = CORE::rename($old, $new);
    }
